datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator erd {
  provider = "prisma-erd-generator"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  firstname String?
  lastname  String?
  posts     Post[]
  role      Role
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

model Client {
  id                String              @id @default(cuid())
  createdAt         DateTime            @default(now())
  updatedAt         DateTime            @updatedAt
  email             String              @unique
  password          String
  nickname          String?             @default("User")
  balance           Int?                @default(0)
  VerifyRecord      VerifyRecord[]
  ClientAccessToken ClientAccessToken[]
  webhook           ClientWebhook[]
}

model Verifier {
  id              String         @id @default(cuid())
  createdAt       DateTime       @default(now())
  updatedAt       DateTime       @updatedAt
  email           String         @unique
  password        String
  VerifyRecord    VerifyRecord[]
  VerifierGroup   VerifierGroup? @relation(fields: [verifierGroupId], references: [id])
  verifierGroupId String?
}

model VerifierGroup {
  id        String     @id @default(cuid())
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  name      String
  Verifier  Verifier[]
}

model Admin {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
}

model VerifyRecord {
  id           String       @id @default(cuid())
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
  title        String
  content      String
  type         ResourceType
  verifyStatus VerifyStatus @default(PENDING)
  verifier     Verifier?    @relation(fields: [verifierId], references: [id])
  verifierId   String?
  client       Client       @relation(fields: [clientId], references: [id])
  clientId     String
  Queue        Queue?       @relation(fields: [queueId], references: [id])
  queueId      String?
  rejectReason String?
  oriId        String?
}

model Queue {
  id              String            @id @default(cuid())
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  title           String
  VerifyRecord    VerifyRecord[]
  MachineStrategy MachineStrategy[]
}

model MachineStrategy {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  url       String
  title     String
  content   String
  reasonTag String   @default("违规资源")
  code      String   @default("default")
  queue     Queue?   @relation(fields: [queueId], references: [id])
  queueId   String?
}

model ClientAccessToken {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  appid     String
  token     String

  Client   Client? @relation(fields: [clientId], references: [id])
  clientId String?
}

model Notice {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  title     String
  content   String
}

model IllegalWord {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  word      String
}

model IllegalPic {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  title     String
  url       String
}

model ClientWebhook {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  url       String
  Client    Client?  @relation(fields: [clientId], references: [id])
  clientId  String?
}

enum Role {
  ADMIN
  USER
}

enum ResourceType {
  IMAGE
  VIDEO
  TEXT
}

enum VerifyStatus {
  PENDING
  VERIFIED
  REJECTED
}
