//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Client {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  nickname String [default: 'User']
  balance Int [default: 0]
  VerifyRecord VerifyRecord [not null]
  ClientAccessToken ClientAccessToken [not null]
  webhook ClientWebhook [not null]
}

Table Verifier {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  VerifyRecord VerifyRecord [not null]
  VerifierGroup VerifierGroup
  verifierGroupId String
}

Table VerifierGroup {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  Verifier Verifier [not null]
}

Table Admin {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
}

Table VerifyRecord {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  content String [not null]
  type ResourceType [not null]
  verifyStatus VerifyStatus [not null, default: 'PENDING']
  verifier Verifier
  verifierId String
  client Client [not null]
  clientId String [not null]
  Queue Queue
  queueId String
  rejectReason String
  oriId String
}

Table Queue {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  VerifyRecord VerifyRecord [not null]
  MachineStrategy MachineStrategy [not null]
}

Table MachineStrategy {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  url String [not null]
  title String [not null]
  content String [not null]
  reasonTag String [not null, default: '违规资源']
  code String [not null, default: 'default']
  queue Queue
  queueId String
}

Table ClientAccessToken {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  appid String [not null]
  token String [not null]
  Client Client
  clientId String
}

Table Notice {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  content String [not null]
}

Table IllegalWord {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  word String [not null]
}

Table IllegalPic {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  url String [not null]
}

Table ClientWebhook {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  url String [not null]
  Client Client
  clientId String
}

Enum Role {
  ADMIN
  USER
}

Enum ResourceType {
  IMAGE
  VIDEO
  TEXT
}

Enum VerifyStatus {
  PENDING
  VERIFIED
  REJECTED
}

Ref: Post.authorId > User.id

Ref: Verifier.verifierGroupId > VerifierGroup.id

Ref: VerifyRecord.verifierId > Verifier.id

Ref: VerifyRecord.clientId > Client.id

Ref: VerifyRecord.queueId > Queue.id

Ref: MachineStrategy.queueId > Queue.id

Ref: ClientAccessToken.clientId > Client.id

Ref: ClientWebhook.clientId > Client.id